--- a/src/app/components/all-cases/single-case/single-case.component.scss
+++ b/src/app/components/all-cases/single-case/single-case.component.scss
@@ -30,6 +30,15 @@
   .des_text{
     line-height: 28px;
   }
+  .share_btn{
+    background-color: #FF4E45;
+    padding: 8px;
+    margin: 3px 0px;
+    margin-left: auto !important;
+    border-radius: 24px;
+    border: 0px;
+    display: flex;
+  }
   .video-card img {
     width: 22rem;
     height: 18rem;
