--- a/src/app/components/all-cases/single-case/single-case.component.html
+++ b/src/app/components/all-cases/single-case/single-case.component.html
@@ -29,7 +29,7 @@
 
         </div>
 
-        <mat-expansion-panel style="background: #2E2E2E;padding: 12px;color: #fff;">
+        <mat-expansion-panel style="background: #2E2E2E;padding: 12px;color: #fff;" expanded>
           <mat-expansion-panel-header>
             <mat-panel-title style="font-weight: 500;">
               Description
