--- a/src/app/auth/login/login.component.scss
+++ b/src/app/auth/login/login.component.scss
@@ -13,11 +13,24 @@ mat-label .required {
 
 .glassy-form-container {
     background: rgb(118 108 108 / 20%);
-    width: 30%;
-    height: 65vh;
+    top: 50px;
+    position: relative;
+    // width: 30%;
+    // height: 65vh;
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+}
+
+.forgot_text{
+    text-align: center;
+    color: #fff;
+    font-weight: 500;
+}
+.sign_up_text{
+    text-align: center;
+    color: #fff;
+    font-weight: 600;
 }
 
 .glassy-form {
