--- a/src/app/navbar/sidenav/sidenav.component.html
+++ b/src/app/navbar/sidenav/sidenav.component.html
@@ -34,7 +34,7 @@
         </div>
         <!-- <span mat-menu-item><mat-icon class="iconCls">logout</mat-icon>Logout</span> -->
       </div>
-      <mat-icon (click)="profile()">person</mat-icon>
+      <mat-icon (click)="profile()" style="cursor: pointer;">person</mat-icon>
     <!-- </div> -->
    
   </nav>
