--- a/src/app/components/all-cases/single-case/single-case.component.html
+++ b/src/app/components/all-cases/single-case/single-case.component.html
@@ -6,7 +6,7 @@
           <!-- <div *ngFor="let video of recommendList" class="recommend-card" (click)="routeToSingleCase(video._id)"> -->
             <!-- {{current_case_dtls.youtubeUrl}} width="560" -->
             <!-- <iframe style="width: 100%;" height="400" src="https://www.youtube.com/embed/1ozGKlOzEVc" frameborder="0" allowfullscreen></iframe> -->
-            <iframe style="width: 100%;" height="400" [src]= "videoURL"frameborder="0" allowfullscreen></iframe>
+            <iframe style="width: 100%;" height="600" [src]= "videoURL"frameborder="0" allowfullscreen></iframe>
             <!-- <img [src]="current_case_dtls.thumbnail" style="width: 100%;" alt="Video Thumbnail"> -->
             <div class="ml-3 mt-3">
               <p style="color: white;font-weight: 600;margin: 5px 0px 5px 0px;">{{ current_case_dtls.title }}</p>
@@ -16,7 +16,7 @@
           <!-- </div> -->
         </div>
         <div class="ml-3 mt-5" style="display: flex;">
-          <p style="background-color: white;border-radius: 50%;width: 5%;"></p>
+          <p style="background-color: white;border-radius: 50%;width: 50px; height: 50px;"></p>
           <div class="ml-2"  style="display: block;">
             <p style="color: white;font-weight: 600;margin: 5px 0px 5px 0px;">{{ current_case_dtls.institution }}</p>
             <p style="color: #FFFFFF80;;font-weight: 600;">Chennai, India.</p>
@@ -50,7 +50,7 @@
 
       <div class="recommend-cards">
         <div *ngFor="let video of recommendList" class="recommend-card" (click)="routeToSingleCase(video._id)">
-          <img [src]="video.thumbnail" style="width: 40%;" alt="Video Thumbnail">
+            <img [src]="video.thumbnail" style="width: 40%;" alt="Video Thumbnail">
           <div class="ml-3">
             <p style="color: white;font-weight: 600;margin: 5px 0px 5px 0px;">{{ video.title }}</p>
             <p style="color: #FFFFFF80;
