--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,20 @@
-<p>home page works!</p>
+<!-- <p>home page works!</p> -->
+<div class="container">
+  <div class="innerContainer">
+    <div class="box">
+      <div class="imgDiv">
+        <img src="../../assets/earth sunrise1.jpg" alt="">
+      </div>
+      <div class="content">
+        <div class="textBox">
+          <h1 class="hd1">Transforming interventional <br> cardiology</h1>
+          <!-- <h1 class="hd1">cardiology</h1> -->
+          <h1 class="hd2">with 24/7/365 live procedures from top global sites and experts</h1>
+        </div>
+        <div class="getStarted">
+          <button>GET STARTED</button>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
