--- a/src/app/navbar/sidenav/sidenav.component.html
+++ b/src/app/navbar/sidenav/sidenav.component.html
@@ -24,8 +24,10 @@
        
 
         <!-- <li class="vertical-bar"><a href="javascript:void(0)"> Experts</a></li> -->
-        <li><a class="sidenav-link-text vertical-bar" routerLink='/user/experts'  routerLinkActive="active"
-          [routerLinkActiveOptions]="{exact:true}">Experts</a></li>
+        <!-- <li><a class="sidenav-link-text vertical-bar" routerLink='/user/experts'  routerLinkActive="active"
+          [routerLinkActiveOptions]="{exact:true}">Experts</a></li> -->
+          <li><a class="sidenav-link-text vertical-bar" routerLink='user/operators'  routerLinkActive="active"
+            [routerLinkActiveOptions]="{exact:true}">Operators</a></li>
         <li class="vertical-bar"><a href="javascript:void(0)">Institutions</a></li> 
       </div>
     </ul>
