--- a/src/app/components/all-cases/all-cases.component.scss
+++ b/src/app/components/all-cases/all-cases.component.scss
@@ -37,12 +37,13 @@
     color: white;
     font-weight: 600;
     margin: 5px 0px 5px 0px;
-    width: 70%;
+    width: 100%;
   }
   
   .video-card img {
-    width: 22rem;
-    height: 18rem;
+    // width: 22rem;
+    // height: 18rem;
+    width: 100%;
   }
   
   mat-expansion-panel{
@@ -62,4 +63,9 @@
   hr {
     border-color: #FF4E4566; /* Set the color you want, e.g., red */
     margin: 10px 0px 10px 0px !important;
+  }
+
+  mat-checkbox{
+    display: flex;
+    align-items: flex-start;
   }
