--- a/src/app/components/all-cases/single-case/single-case.component.scss
+++ b/src/app/components/all-cases/single-case/single-case.component.scss
@@ -20,15 +20,23 @@
   
   .recommend-cards{
     cursor: pointer !important;
+    width: 100%;
+    // iframe{
+    //   width: ;
+    // }
   }
   
   .recommend-card {
     // width: 31%; /* Adjust as needed */
     margin: 10px 0px;
-    display: flex;
+    // display: flex;
+    display: grid;
+    grid-template-columns: 2fr 3fr;
   }
   .des_text{
     line-height: 28px;
+    // color: azure;
+    // font-size: 18px;
   }
   .share_btn{
     background-color: #FF4E45;
