--- a/src/app/components/all-cases/single-case/single-case.component.scss
+++ b/src/app/components/all-cases/single-case/single-case.component.scss
@@ -47,6 +47,7 @@
     border: 0px;
     display: flex;
     justify-content: center;
+    cursor: pointer;
   }
   .video-card img {
     width: 22rem;
@@ -61,3 +62,35 @@
     border-color: #FF4E4566; /* Set the color you want, e.g., red */
     margin: 10px 0px 10px 0px !important;
   }
+
+
+  // ------------------
+  .share-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    z-index: 1000;
+}
+
+.close-btn {
+    background: none;
+    border: none;
+    cursor: pointer;
+}
+.share-buttons-icon {
+  width: 40px !important; 
+  height: 40px !important;
+  margin: 10px !important; 
+  border-radius: 50% !important; 
+  overflow: hidden !important; 
+  display: flex !important;
+  align-items: center;
+  justify-content: center;
+}
