share button commment out

--- a/src/app/components/all-cases/single-case/single-case.component.html
+++ b/src/app/components/all-cases/single-case/single-case.component.html
@@ -25,7 +25,7 @@
             <mat-icon class="ml-2" style="color: #fff">share</mat-icon>
             <span class="mt-1 mr-2 ml-1" style="color: #fff;">SHARE</span>
           </button> -->
-            <button class="share_btn" (click)="onShareButtonClick()">
+            <!-- <button class="share_btn" (click)="onShareButtonClick()">
                 <mat-icon class="ml-2" style="color: #fff">share</mat-icon>
                 <span class="mt-1 mr-2 ml-1" style="color: #fff;">SHARE</span>
             </button>
@@ -39,7 +39,7 @@
                 [showIcon]="true" [showText]="false" url="https://www.instagram.com/dhanasekar___1110/"
                 description="dhanasekar instagram" twitterAccount="rodrigokamada" class="pt-5">
             </share-buttons>
-        </div>
+        </div> -->
         </div>
 
         <mat-expansion-panel style="background: #2E2E2E;padding: 12px;color: #fff;" expanded>
