--- a/src/app/components/experts/experts.component.html
+++ b/src/app/components/experts/experts.component.html
@@ -39,11 +39,11 @@
              <div class="contBox">
                 <mat-card-title>{{ops.name}}</mat-card-title>
                 <mat-card-subtitle>
-                    {{ops.designation}}
+                    <!-- {{ops.institution.name}} -->
+                    {{ops.institution.name}}
                 </mat-card-subtitle>
                 <mat-card-subtitle>
-                    <!-- {{ops.institution.name}} -->
-                    {{ops.institution}}
+                    {{ops.designation}}
                 </mat-card-subtitle>
                 <!-- <mat-card-subtitle *ngIf="institutes[i]">{{institutes[i].name}}</mat-card-subtitle> -->
                 <mat-card-content class="text-wrap-example">
