--- a/src/app/navbar/sidenav/sidenav.component.html
+++ b/src/app/navbar/sidenav/sidenav.component.html
@@ -15,7 +15,8 @@
         </li> -->
         <li><a class="sidenav-link-text" routerLink='/user/landing'  routerLinkActive="active"
           [routerLinkActiveOptions]="{exact:true}">Home</a></li>
-          <li class="vertical-bar"><a href="javascript:void(0)">Schedule</a></li>
+          <li class="vertical-bar"><a href="javascript:void(0)" routerLink='/user/schedule' routerLinkActive="active" 
+            [routerLinkActiveOptions]="{exact:true}">Schedule</a></li>
         <li><a class="sidenav-link-text vertical-bar" routerLink='/user/all-cases'  routerLinkActive="active"
           [routerLinkActiveOptions]="{exact:true}">All Cases</a></li>
 
