--- a/src/app/components/schedule/schedule.component.scss
+++ b/src/app/components/schedule/schedule.component.scss
@@ -11,6 +11,9 @@
     background-color: #f5f5f5;
     padding: 15px;
   }
+  .timezoneField{
+    float: right;
+  }
 
   .cal-month-view {
     background-color: #000;
