--- a/src/app/components/all-cases/single-case/single-case.component.html
+++ b/src/app/components/all-cases/single-case/single-case.component.html
@@ -53,7 +53,7 @@
           <p class="des_text">{{current_case_dtls.description}}</p>
           
         </mat-expansion-panel> -->
-        <disqus [identifier]="pageId"></disqus>
+        <disqus identifier="/test" ></disqus>
 
         <!-- <div id="hyvor-talk-comments"></div> -->
         <!-- <hyvor-talk-comments website-id="10253" page-id="" id="comments-container"></hyvor-talk-comments> -->
