--- a/src/app/components/all-cases/single-case/single-case.component.html
+++ b/src/app/components/all-cases/single-case/single-case.component.html
@@ -41,8 +41,8 @@
             </share-buttons>
         </div> -->
         </div>
-<!-- 
-        <mat-expansion-panel style="background: #2E2E2E;padding: 12px;color: #fff;" expanded>
+
+        <!-- <mat-expansion-panel style="background: #2E2E2E;padding: 12px;color: #fff;" expanded>
           <mat-expansion-panel-header>
             <mat-panel-title style="font-weight: 500;">
               Description
@@ -53,7 +53,7 @@
           <p class="des_text">{{current_case_dtls.description}}</p>
           
         </mat-expansion-panel> -->
-        <disqus identifier="/test" ></disqus>
+        <disqus [identifier]="pageId" ></disqus>
 
         <!-- <div id="hyvor-talk-comments"></div> -->
         <!-- <hyvor-talk-comments website-id="10253" page-id="" id="comments-container"></hyvor-talk-comments> -->
