--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -27,8 +27,8 @@
                     <button class="disBut" mat-flat-button color="primary" type="submit">{{'Sign In' |
                         uppercase}}</button>
                 </div>
-                <a class="header forgot_text mb-3">Forget password?</a>
-                <p class="header sign_up_text">New here? <a style="text-decoration: underline;">Click here</a> to Sign Up! </p>
+                <a class="header forgot_text mb-3" routerLink="/auth/forgetpassword">Forget password?</a>
+                <p class="header sign_up_text">New here? <a style="text-decoration: underline;" routerLink="/auth/signUp">Click here</a> to Sign Up! </p>
             </form>
         </div>
     </div>
