--- a/src/app/body/body.component.scss
+++ b/src/app/body/body.component.scss
@@ -1,6 +1,6 @@
 .body {
     // width: calc(100% - 5rem);
-     height: 100vh;
+    //  height: 100vh;
     z-index: 0;
     position: relative;
     transition: all .5s ease;
