--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -111,14 +111,13 @@
 
 .hd2 {
   margin-bottom: 50px;
-  display: flex;
-  justify-content: center;
   color: rgba(255, 255, 255, 0.80);
   font-size: 36px;
   font-style: normal;
   font-weight: 700;
   line-height: 70px;
   text-transform: uppercase;
+  text-align: center;
 }
 
 .getStarted {
