--- a/src/app/navbar/sidenav/sidenav.component.html
+++ b/src/app/navbar/sidenav/sidenav.component.html
@@ -29,7 +29,9 @@
           [routerLinkActiveOptions]="{exact:true}">Experts</a></li> -->
           <li><a class="sidenav-link-text vertical-bar" routerLink='user/operators'  routerLinkActive="active"
             [routerLinkActiveOptions]="{exact:true}">Operators</a></li>
-        <li class="vertical-bar"><a href="javascript:void(0)">Institutions</a></li> 
+            <li><a class="sidenav-link-text vertical-bar" routerLink='user/institution'  routerLinkActive="active"
+              [routerLinkActiveOptions]="{exact:true}">Institutions</a></li>
+        <!-- <li class="vertical-bar"><a href="javascript:void(0)">Institutions</a></li>  -->
       </div>
     </ul>
     <!-- <div> -->
